# whimsi

./: .gitignore  .gitmodules  .justfiles  .rustfmt.toml  Cargo.toml  JUSTFILE  README.md  sorting_off.msi  sorting_on.msi
crates/cfb/: Cargo.toml  README.md
crates/cfb/src/: lib.rs
crates/command/: Cargo.toml
crates/command/src/: builder.rs  command_line.rs  constants.rs  inspector.rs  main.rs  scan.rs
crates/command/src/builder/: mod.rs
crates/command/src/builder/tables/: component.rs  directory.rs  mod.rs
crates/command/src/config/: mod.rs
crates/command/src/models/: directory.rs
crates/command/src/traits/: identifier.rs
crates/command/tests/: integration_test.rs
crates/command/tests/resources/: example.ron
crates/lib/: Cargo.toml  README.md
crates/lib/examples/: reference.rs
crates/lib/examples/reference/: README.md
crates/lib/resources/: Schema.msi
crates/lib/src/: builder.rs  constants.rs  lib.rs  macros.rs
crates/lib/src/tables/: builder_list.rs  builder_table.rs  dao.rs  identifier_generator_table.rs  macros.rs  meta.rs  mod.rs
crates/lib/src/tables/admin_execute_sequence/: table.rs
crates/lib/src/tables/admin_ui_sequence/: table.rs
crates/lib/src/tables/advt_execute_sequence/: dao.rs  table.rs
crates/lib/src/tables/app_search/: dao.rs  table.rs
crates/lib/src/tables/binary/: dao.rs  table.rs
crates/lib/src/tables/component/: dao.rs  table.rs
crates/lib/src/tables/custom_action/: dao.rs  table.rs
crates/lib/src/tables/directory/: dao.rs  directory_identifier.rs  mod.rs  table.rs
crates/lib/src/tables/feature/: identifier.rs  mod.rs  table.rs
crates/lib/src/tables/feature_components/: dao.rs  table.rs
crates/lib/src/tables/file/: attributes.rs  dao.rs  table.rs
crates/lib/src/tables/icon/: dao.rs  table.rs
crates/lib/src/tables/install_execute_sequence/: table.rs
crates/lib/src/tables/install_ui_sequence/: table.rs
crates/lib/src/tables/launch_condition/: dao.rs  table.rs
crates/lib/src/tables/lock_permissions/: dao.rs  lock_object.rs  lock_permissions.rs  mod.rs  table.rs
crates/lib/src/tables/media/: cabinet_identifier.rs  disk_id.rs  helper.rs  last_sequence.rs  mod.rs  property.rs  table.rs
crates/lib/src/tables/msi_file_hash/: dao.rs
crates/lib/src/tables/property/: dao.rs  table.rs
crates/lib/src/tables/reg_locator/: dao.rs  table.rs
crates/lib/src/tables/registry/: dao.rs  table.rs
crates/lib/src/tables/service_control/: dao.rs  event.rs  mod.rs  table.rs
crates/lib/src/tables/service_install/: dao.rs  error_control.rs  mod.rs  service_type.rs  start_type.rs  table.rs
crates/lib/src/tables/shortcut/: dao.rs  table.rs
crates/lib/src/tables/signature/: dao.rs  table.rs
crates/lib/src/types/: standard_action.rs
crates/lib/src/types/column/: binary.rs  cabinet.rs  condition.rs  custom_source.rs  default_dir.rs  double_integer.rs  filename.rs  formatted.rs  formatted_sddl_text.rs  guid.rs  identifier.rs  integer.rs  language.rs  mod.rs  property.rs  reg_path.rs  sequence.rs  shortcut.rs  text.rs  version.rs
crates/lib/src/types/helpers/: action_identifier.rs  architecture.rs  cabinet_info.rs  cabinets.rs  custom_action_type.rs  date.rs  disk_id.rs  error_control.rs  icon.rs  id_generator.rs  identifier_generator.rs  key_path.rs  last_sequence.rs  locator_type.rs  lock_object.rs  lock_permission.rs  lock_table.rs  mod.rs  page_count.rs  primary_identifier.rs  registry_root.rs  security_flag.rs  service_control_event.rs  service_type.rs  show_cmd.rs  start_type.rs  to_msi_value.rs
crates/lib/src/types/helpers/attributes/: component.rs  feature.rs  file.rs  mod.rs
crates/lib/src/types/properties/: system_folder.rs
crates/macros/: Cargo.toml
crates/macros/src/: constants.rs  dao.rs  helper.rs  identifier.rs  lib.rs  msi_tables.rs  table.rs
crates/msi/: Cargo.toml  README.md
crates/msi/examples/: basic_msi.rs  comparitor.rs  msiinfo.rs  msiquery.rs
crates/msi/src/: lib.rs
crates/msi/src/internal/: category.rs  codepage.rs  column.rs  expr.rs  language.rs  package.rs  propset.rs  query.rs  summary.rs  table.rs  value.rs
crates/msi/tests/: delete.rs  select.rs  signature.rs  streams.rs  summary.rs  tables.rs  validation.rs
crates/whimsi/: README.md
crates/whimsi-lib/: Cargo.toml  README.md
crates/whimsi-lib/examples/: poc.rs  reference.rs
crates/whimsi-lib/src/: builder.rs  constants.rs
crates/whimsi-msi/examples/: msiinfo.rs  msiquery.rs
crates/whimsi-msi/tests/: delete.rs  summary.rs  tables.rs
crates/whimsi/src/: command_line.rs  inspector.rs  main.rs
examples/: example.ron  poc.rs  reference.rs
examples/reference/: PING_v0.1.0.msi
src/: README.md  buildable.rs  builder.rs  command_line.rs  constants.rs  inspector.rs  lib.rs  lister.rs  main.rs  scan.rs
src/builder/: mod.rs
src/builder/tables/: directory.rs  file.rs  mod.rs
src/config/: files.rs  mod.rs  product.rs  summary.rs
src/tables/: builder_list.rs  builder_table.rs  component.rs  dao.rs  directory.rs  environment_variable.rs  feature.rs  file.rs  id_generator_builder_list.rs  macros.rs  meta.rs  mod.rs  permission.rs  property.rs  registry.rs  service.rs  shortcut.rs  table_entry.rs
src/tables/advt_execute_sequence/: dao.rs  table.rs
src/tables/component/: attributes.rs  dao.rs  helper.rs  mod.rs  table.rs
src/tables/directory/: dao.rs  directory_identifier.rs  helper.rs  kind.rs  mod.rs  subdirectory.rs  system_directory.rs  table.rs
src/tables/feature/: dao.rs  feature_identifier.rs  identifier.rs  mod.rs  table.rs
src/tables/feature_components/: dao.rs  table.rs
src/tables/file/: attributes.rs  dao.rs  helper.rs  mod.rs  table.rs
src/tables/generic_sequence/: action_identifier.rs  dao.rs
src/tables/media/: cabinet_identifier.rs  dao.rs  disk_id.rs  helper.rs  last_sequence.rs  mod.rs  property.rs  table.rs
src/tables/msi_file_hash/: dao.rs  mod.rs  table.rs
src/tables/property/: dao.rs  mod.rs  table.rs  (+1 more)
src/types/: default_dir.rs  double_integer.rs  filename.rs  formatted_sddl_text.rs  guid.rs  identifier.rs  integer.rs  language.rs  mod.rs  standard_action.rs
(+101 files in other folders)
