[package]
name = "whimsi-lib"
version = "0.0.0"
edition = "2024"
description = "A library for generating Windows MSIs"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.10"
enum_dispatch = "0.3.13"
getset = "0.1.6"
itertools = "0.14.0"
msi = "0.9.0"
regex = "1.10.6"
roxygen = "1.0.4"
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
once_cell = "1.21.3"
derive_more = { version = "2.0.1", features = ["full"] }
ambassador = "0.4.1"
thiserror = "2.0.12"
rand = "0.9.2"
bitmask-enum = "2.2.5"
cab = "0.6.0"

[dev-dependencies]
assert_fs = "1.1.3"
assertables = "9.8.2"
similar-asserts = "1.7.0"
test-case = "3.3.1"
chrono = "0.4.41"

[profile.release]
lints = "deny"
