[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Dominic J Grimaldi <self@grimoutlook.dev>"]
repository = "https://github.com/GrimOutlook/whimsi"
keywords = ["msi", "windows", "installer", "package"]
license = "MIT"
readme = "README.md"
edition = "2024"


[profile.release]
lints = "deny"
