[package]
name = "whimsi-cfb"
version = "0.0.0"
edition = "2024"
description = "A library for reading and writing CFB files"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
bitmask-enum = "2.2.5"
bytemuck = "1.23.2"
camino = "1.1.10"
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["full"] }
getset = "0.1.6"
itertools = "0.14.0"
pastey = "0.1.1"
rand = "0.9.2"
regex = "1.10.6"
roxygen = "1.0.4"
strum = { version = "0.27.2", features = ["derive"] }
subenum = "1.1.2"
tempfile = "3.21.0"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
assert_fs = "1.1.3"
assertables = "9.8.2"
similar-asserts = "1.7.0"
test-case = "3.3.1"
chrono = "0.4.41"
tracing-subscriber = "0.3.20"
