[package]
name = "whimsi"
version = "0.1.0"
edition = "2021"

[dependencies]
ambassador = "0.4.1"
anyhow = "1.0.98"
assert_fs = { version = "1.1.3", features = ["color"] }
assertables = "9.8.1"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.34", features = ["derive"] }
cli-table = "0.5.0"
derive-new = "0.7.0"
flexstr = { version = "0.9.2", features = ["serde"] }
getset = "0.1.5"
itertools = "0.14.0"
lcid = "0.3.0"
roxygen = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
msi = "0.9.0"
whimsi-msi = { path = "../msi/" }
whimsi-lib = { path = "../lib/" }

[dev-dependencies]
similar-asserts = "1.7.0"
test-case = "3.3.1"
