[package]
name = "whimsi-lib"
version = "0.0.0"
edition = "2024"
description = "A library for generating Windows MSIs"
license = "MIT"

[dependencies]
ambassador = "0.4.1"
anyhow = "1.0.100"
bitflags = "2.9.1"
bitmask-enum = "2.2.5"
bytemuck = "1.23.2"
cab = "0.6.0"
camino = "1.1.10"
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["full"] }
enum_dispatch = "0.3.13"
getset = "0.1.6"
itertools = "0.14.0"
md-5 = "0.10.6"
names = { version = "0.14.0", default-features = false }
num-traits = "0.2.19"
once_cell = "1.21.3"
pastey = "0.1.1"
rand = "0.9.2"
regex = "1.10.6"
roxygen = "1.0.4"
strum = { version = "0.27.2", features = ["derive"] }
subenum = "1.1.2"
tempfile = "3.21.0"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
whimsi-macros = { path = "../macros/" }
msi = { path = "../../../rust-msi/" }
nutype_macros = { version = "0.6.2", features = ["derive_unsafe", "regex", "std"] }
delegate = "0.13.4"

[dev-dependencies]
assert_fs = "1.1.3"
assertables = "9.8.2"
similar-asserts = "1.7.0"
test-case = "3.3.1"
chrono = "0.4.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.47", features = ["derive"] }
