[package]
name = "whimsi-msi"
version.workspace = true
authors.workspace = true
description = "Read/write Windows Installer (MSI) files"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1"
cfb = "0.11"
encoding_rs = "0.8"
uuid = "1"

[dev-dependencies]
clap = "4.5"
clap_derive = "4.5.47"
pest = "2.1"
pest_derive = "2.1"
time = "0.3"
