[package]
name = "whimsi-msi"
version.workspace = true
authors.workspace = true
description = "Read/write Windows Installer (MSI) files"
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1"
cfb = "0.11"
encoding_rs = "0.8"
uuid = "1"

[dev-dependencies]
anyhow = "1.0.100"
assert2 = "0.3.16"
clap = "4.5"
clap_derive = "4.5.47"
itertools = "0.14.0"
pest = "2.1"
pest_derive = "2.1"
similar = "2.7.0"
time = "0.3"
